[package]
name = "bevris"
version = "0.1.0"
authors = ["sim"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bevy = {git="https://github.com/bevyengine/bevy.git", branch="master"}
bevy = "^0.2"
arrayvec = "^0.5"
rand = {version = "^0.7", features = ["small_rng"]}